--- a/tests/Sample.NUnit/Sample.NUnit.csproj
+++ b/tests/Sample.NUnit/Sample.NUnit.csproj
@@ -23,9 +23,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Selenium.SelfHealing.v4" Version="0.99.24-beta.1" />
     <PackageReference Include="Selenium.WebDriver" Version="4.4.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="104.0.5112.7900" />
-    <PackageReference Include="Selenium.WebDriver.SelfHealing" Version="0.99.6-beta.1" />
   </ItemGroup>
 
 </Project>
